Dynamically creates WebServiceTemplates at start up for each sender present in the properties. At start up read the certificates for each sender and store them in a hashmap for easy access. Signs the digital mail payload with the appropriate certificate based on the sender attribute in the incoming request.